修改破折号

--- a/_posts/2014-1-11-6-26900.md
+++ b/_posts/2014-1-11-6-26900.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　“女仆学校其余的力量可以分布到上述的那些新设班级里，扩大招生面，毕竟那些新设班级培养的女性人员都是很有必要的，如果是精英归化民，当然也可以在这些女性人员里面试图追求一两个，只不过是双向选择，没有元老们那么想要谁是谁，另外也不用办公厅培训了。”
 
-　　这时候又有人提出新得方案了：“我的看法是维持女仆学校的完整建制，学制可以放得较长，三四年，或者五六年也可以，但是主要延长所谓的实习期。经过集中脱产培训的学生，根据办公厅的统计数据————部门元老购买女仆的比例和提交的增购女仆的申请————整建制到相应部门进行相关实习。实习期间跟元老一起的时间长，有助于元老更好的观察其品行等细节。
+　　这时候又有人提出新得方案了：“我的看法是维持女仆学校的完整建制，学制可以放得较长，三四年，或者五六年也可以，但是主要延长所谓的实习期。经过集中脱产培训的学生，根据办公厅的统计数据——部门元老购买女仆的比例和提交的增购女仆的申请——整建制到相应部门进行相关实习。实习期间跟元老一起的时间长，有助于元老更好的观察其品行等细节。
 
 　　“实习期间元老看中以后按照标准的女仆购买流程走。未被看中的等实习期结束，到学校等待下一次实习期分配。
 
@@ -30,7 +30,7 @@ tag: [normal]
 
 　　胡青白对女仆学校改制早就有草案，早在几个月前萧子山下发各有关部委办开展女仆和女仆学员情况的“绝密”调查的时候，胡青白已经意识到执委会的意图了。
 
-　　女仆学校废校他是不赞成的————理由并不是元老教师硬挺着上课这么简单。如果直接废校合并到芳草地里来，一大批心比天高，预备着当首长小老婆而不成的女仆学员陡然涌入芳草地，瞬间就会让自己一干人苦心经营的学园的良好的学习氛围完蛋。张智翔已经多次抱怨过一些转专业过来的学员“情绪波动”、“思想复杂”，“起了很坏的作用”。
+　　女仆学校废校他是不赞成的——理由并不是元老教师硬挺着上课这么简单。如果直接废校合并到芳草地里来，一大批心比天高，预备着当首长小老婆而不成的女仆学员陡然涌入芳草地，瞬间就会让自己一干人苦心经营的学园的良好的学习氛围完蛋。张智翔已经多次抱怨过一些转专业过来的学员“情绪波动”、“思想复杂”，“起了很坏的作用”。
 
 　　现在转过来的人还少，让她们回到“正常的学生轨迹”上毋须花太大的力气，如果直接废校，瞬间就是好几百人要到芳草地。教育口的精力实在搭不够。而且前女仆学员涌入芳草地——芳草地的管理远不如女仆学校那样封闭，势必造成某些元老慕名来“寻芳”。
 
