--- a/_posts/2009-9-21-1-02100.md
+++ b/_posts/2009-9-21-1-02100.md
@@ -90,8 +90,8 @@ tag: [normal]
 
 　　体育组本来为大家准备的个人自卫方案是匕首，但是此时有了北美分舵这个金手指，不免要奢侈一把。手枪在美国民用市场上非常大众化，可选择的型号很多。不过出于简化装备，便于修配和零件互换考虑，只能选择一种手枪。
 
-　　使用9mm巴拉贝鲁姆弹没什么异议，毕竟这是一种主流的手枪弹药，至于手枪本身，多数人倾向M9——原因是它长得帅知名度又高，小马哥的英姿是这一代人难以忘怀的。M1911也有人支持，奈何略重了一些，不讨多数小资的喜欢。至于PPK、S&amp;W左轮、Glock，都有人捧场。
+　　使用9mm巴拉贝鲁姆弹没什么异议，毕竟这是一种主流的手枪弹药，至于手枪本身，多数人倾向M9——原因是它长得帅知名度又高，小马哥的英姿是这一代人难以忘怀的。M1911也有人支持，奈何略重了一些，不讨多数小资的喜欢。至于PPK、S&W左轮、Glock，都有人捧场。
 
-　　出于好用，轻便、易维护多种考虑，执委会本来意愿是选择S&amp;W的9mm左轮手枪，它有左轮手枪的一切不利之处：漏气，射程近，弹药少，装填慢的问题。不过从执委会看来，这东西反正也是在二三十米之内防身用的，无需太出众的性能，关键就是简单耐用。
+　　出于好用，轻便、易维护多种考虑，执委会本来意愿是选择S&W的9mm左轮手枪，它有左轮手枪的一切不利之处：漏气，射程近，弹药少，装填慢的问题。不过从执委会看来，这东西反正也是在二三十米之内防身用的，无需太出众的性能，关键就是简单耐用。
 
-　　问题是体育组显然不喜欢这种武器，PLA从来没有使用左轮枪的传统，大家对这东西不够放心，而且左轮枪的造型显然不够酷，一看到这枪就让多数穿越众想起了火力贫乏的皇家香港警察。最后平衡的后果就是M9和S&amp;W的M337都列入了采购清单。
+　　问题是体育组显然不喜欢这种武器，PLA从来没有使用左轮枪的传统，大家对这东西不够放心，而且左轮枪的造型显然不够酷，一看到这枪就让多数穿越众想起了火力贫乏的皇家香港警察。最后平衡的后果就是M9和S&W的M337都列入了采购清单。
