--- a/_posts/2009-9-22-1-02200.md
+++ b/_posts/2009-9-22-1-02200.md
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　“至于手枪，M9纯属样子货，还是选Glock好，价格便宜量又足，美国警察都爱它。价格不到50美元。”
 
-　　林深河乘胜追击，把执委会原来定好的手枪也给改成Glock。M9虽然很帅，但是Glock一样骚，所以没引起反对意见。不过采购比例由多数下降为少数。自动手枪仅仅少量装备给军事方面的专业人员，多数人都改用S&amp;W的左轮。左轮比较适合劣质的复装子弹。
+　　林深河乘胜追击，把执委会原来定好的手枪也给改成Glock。M9虽然很帅，但是Glock一样骚，所以没引起反对意见。不过采购比例由多数下降为少数。自动手枪仅仅少量装备给军事方面的专业人员，多数人都改用S&W的左轮。左轮比较适合劣质的复装子弹。
 
 　　然后林深河又做出了许多建议：如要购买大量俄制的4倍光学瞄准镜——如果想要步枪能发挥出其超过400米以上的远射功能，瞄准镜必不可少。还有少量的高倍率狙击用瞄准具，作为狙击手的配备。
 
