--- a/_posts/2012-1-8-5-01100.md
+++ b/_posts/2012-1-8-5-01100.md
@@ -18,7 +18,7 @@ tag: [normal]
 
 　　香港开发计划一经过公布，立刻引来了新的跑官要官的热潮。尽管第二次全体大会对官员选拔制订了“自愿报名，组织审核”这一基本原则，还是有许多人除了在内部网组织处网站上报名之外，又私下去拜访各种他们认为能够发挥影响力的人物。明朗不得不连着几天不出办公厅的院门，以免被人强拉去“吃个饭，聊个天”。
 
-　　经过一番激烈的台上台下的活动，最终公布了一份香港地区的官僚配置名单：农垦香港联队的联队长由天地会的技术员洛辰出任；石志奇出任香港警备司令，乐琳出任香港海军支队司令;洪水尹出任香港商务代表。
+　　经过一番激烈的台上台下的活动，最终公布了一份香港地区的官僚配置名单：农垦香港联队的联队长由天地会的技术员洛辰出任；石志奇出任香港警备司令，乐琳出任香港海军支队司令；洪水尹出任香港商务代表。
 
 　　除此之外，还配备了一批技术干部前往香港。包括大力鼓吹在香港建造造船厂的施建涛。此人原本在企划院供职，对造船业非常感兴趣，便主动请缨担任香港船厂的厂长。
 
