--- a/_posts/2013-11-19-6-22000.md
+++ b/_posts/2013-11-19-6-22000.md
@@ -24,7 +24,7 @@ tag: [normal]
 
 　　“阁下，您的战舰如此精良，纵然在欧洲各地最盛产快船的塞维利亚与热那亚恐怕也是很难造成的。”即便舰炮瞄准的演练刻意避开了巡逻舰，西班牙人所受到的震慑仍然不小。任何一个对海战稍有常识的人都能看出，艾斯美达拉号这样装载大炮的快船只要两三艘便能从薄弱的艉部包抄攻占一艘大帆船。而且魏斯的客人们还没见识过68磅开花弹和燃烧弹的恐怖呢。
 
-　　“您说的很对，艾斯美达拉号是我的船，而我是一名军人，我的船同我的剑一样是服务于天主的武器。我很愿意听见您称它战舰。”伯爵傲然说道：“我的战舰必须能快速地抢风航行，追击马来海盗的贼船;它要有足够浅的吃水以利于深入暗滩密布的盗匪巢穴，解救被掠为奴的基督徒。本地任何一种船都不合我意，所以我在香港的船坞订造了艾丝美拉达号。当地另有一家工场为我制造采矿的机器，我设计了能灵活旋转的炮架，命令他们制作出来。至于大炮是在澳门博卡罗先生的铸造场里订购的。全部这些费用都出自我个人的收入
+　　“您说的很对，艾斯美达拉号是我的船，而我是一名军人，我的船同我的剑一样是服务于天主的武器。我很愿意听见您称它战舰。”伯爵傲然说道：“我的战舰必须能快速地抢风航行，追击马来海盗的贼船；它要有足够浅的吃水以利于深入暗滩密布的盗匪巢穴，解救被掠为奴的基督徒。本地任何一种船都不合我意，所以我在香港的船坞订造了艾丝美拉达号。当地另有一家工场为我制造采矿的机器，我设计了能灵活旋转的炮架，命令他们制作出来。至于大炮是在澳门博卡罗先生的铸造场里订购的。全部这些费用都出自我个人的收入
 
 　　“香港，您说的是那个现在在那些澳洲人手中的广州外海的小岛么？”
 
