--- a/_posts/2013-11-23-6-22400.md
+++ b/_posts/2013-11-23-6-22400.md
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　“全球性的？”
 
-　　“西班牙人或者说哈布斯堡是世界上第一个全球性帝国。不幸的是这个帝国诞生在没有无线电，没有机动船的时代。在地中海，他们要面对土耳其人;在欧洲大陆，是新教的德意志诸侯和心怀叵测的法国人。然后是荷兰人和英国人。在亚洲和美洲，荷兰人和英国人不遗余力的攻击西班牙人的船只和殖民地。似乎要为这个帝国增加更多的负担，现在西班牙国王又当了葡萄牙国王，原本就捉襟见肘的西班牙海军中队还得担负保卫葡萄牙属地的任务所以说，西班牙人的衰落那不是偶然，是必然。”
+　　“西班牙人或者说哈布斯堡是世界上第一个全球性帝国。不幸的是这个帝国诞生在没有无线电，没有机动船的时代。在地中海，他们要面对土耳其人；在欧洲大陆，是新教的德意志诸侯和心怀叵测的法国人。然后是荷兰人和英国人。在亚洲和美洲，荷兰人和英国人不遗余力的攻击西班牙人的船只和殖民地。似乎要为这个帝国增加更多的负担，现在西班牙国王又当了葡萄牙国王，原本就捉襟见肘的西班牙海军中队还得担负保卫葡萄牙属地的任务所以说，西班牙人的衰落那不是偶然，是必然。”
 
 　　每一个西班牙或者葡萄牙殖民地的总督都很清楚，一旦遭遇到敌人的进攻，除非正好有地方分舰队在港内驻泊，否则他们是得不到任何支援的。殖民地的防务只有自己靠自己，在平日里就做好战斗的准备。
 
