--- a/_posts/2013-12-26-6-25700.md
+++ b/_posts/2013-12-26-6-25700.md
@@ -24,7 +24,7 @@ tag: [normal]
 
 　　以他房间里的简单程度来说是根本看不出有没有人进来过得，但是他的桌子看似混乱，其实堆放都有规律，现在却明显有了移动的痕迹，而放在他案头的像框，更是移动了位置，似乎有人拿起来看过。
 
-　　房间是有本地制造的挂锁的，他刚才开门进来也没觉得锁已经被破坏了。除了他之外，芳草地的保卫科和他的钟点工都有钥匙，随时可以开门进来。不过行政科那把钥匙是备份一般不会取用;而钟点工知道自己的要求，打扫房间的时候从来不动书桌上的东西。
+　　房间是有本地制造的挂锁的，他刚才开门进来也没觉得锁已经被破坏了。除了他之外，芳草地的保卫科和他的钟点工都有钥匙，随时可以开门进来。不过行政科那把钥匙是备份一般不会取用；而钟点工知道自己的要求，打扫房间的时候从来不动书桌上的东西。
 
 　　这屋子里也没什么要紧的东西除了卧具就是一些换洗的衣物，大图书馆出版的书籍，贵重要紧的私人物品不是放在元老宿舍区的宿舍里就是存在办公厅的寄存库里的。
 
