--- a/_posts/2013-12-29-6-26000.md
+++ b/_posts/2013-12-29-6-26000.md
@@ -110,7 +110,7 @@ tag: [normal]
 
 　　“这里的‘凡人’是指彼此无关系的平民。
 
-　　“良人殴伤他人奴婢者，减凡人一等;若死，及故杀者，绞。
+　　“良人殴伤他人奴婢者，减凡人一等；若死，及故杀者，绞。
 
 　　若奴婢自相殴伤、杀者，各依凡斗伤、杀法。相侵财物者，不用此律。
 
@@ -118,7 +118,7 @@ tag: [normal]
 
 　　“也就是说：奴婢和奴婢之间的殴斗和凶杀案，并没有什么财产主人什么事，是奴婢本人承担法律责任。
 
-　　“若良人、奴婢相侵财物，如窃盗、强夺、诈欺、冒认、诓骗、拐带、恐吓、求索之类，因而有所杀伤，不用此加减之律。谓奴婢因良人侵己财物而殴伤之者，不在加等，至死者，俱绞;其良人因侵奴婢财物而反殴之者，不在减等，故杀者，亦斩也。
+　　“若良人、奴婢相侵财物，如窃盗、强夺、诈欺、冒认、诓骗、拐带、恐吓、求索之类，因而有所杀伤，不用此加减之律。谓奴婢因良人侵己财物而殴伤之者，不在加等，至死者，俱绞；其良人因侵奴婢财物而反殴之者，不在减等，故杀者，亦斩也。
 
 　　“良民殴伤奴婢，比良民殴伤良民的惩罚轻一等，也仅仅是轻一等，而不是你所说的减半。杖一百减一等为杖九十，斩刑减一等为绞刑，如此而已。若良民殴奴婢致死，或蓄意杀死奴婢，则不减等，惩罚分别是绞刑和斩刑。
 
