--- a/_posts/2013-12-7-6-23800.md
+++ b/_posts/2013-12-7-6-23800.md
@@ -94,7 +94,7 @@ tag: [normal]
 
 　　孙尚香简直木然了。
 
-　　她不是没有被贴满瓷器的盥洗室吓过，但惊吓过后却是羡慕;但在这个书籍严重匮乏，连抄书都要请托走关系的年代，如此随意的对待书本实在让孙尚香发指。
+　　她不是没有被贴满瓷器的盥洗室吓过，但惊吓过后却是羡慕；但在这个书籍严重匮乏，连抄书都要请托走关系的年代，如此随意的对待书本实在让孙尚香发指。
 
 　　那是书，是书啊！
 
