--- a/_posts/2013-7-29-6-10700.md
+++ b/_posts/2013-7-29-6-10700.md
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　刘大霖是读过得史书的，如何不知道这是“王霸”的图谋。实际上，这些日子以来，澳洲人要改朝换代的谣言就一直在市井流传，甚至在本县的士绅中也半公开的提及。
 
-　　刘大霖对这类谈话，一概是抱着不参与，不评论的态度。实际上，他的内心对待澳洲人十分矛盾。一方面，澳洲人的所作所为，都是“利民”之事；另外一方面，作为大明的进士，他感到自己“深受皇恩”，不愿意澳洲人有朝一日去问鼎中原——以大明的状况，一旦开战，澳洲人还不是摧枯拉朽之势！小小的建奴尚且是朝廷大患，若是换成了这“髦贼”，后果恐怕更难以预料。每每想到这里，他便再也不愿意想下去了。
+　　刘大霖对这类谈话，一概是抱着不参与，不评论的态度。实际上，他的内心对待澳洲人十分矛盾。一方面，澳洲人的所作所为，都是“利民”之事；另外一方面，作为大明的进士，他感到自己“深受皇恩”，不愿意澳洲人有朝一日去问鼎中原——以大明的状况，一旦开战，澳洲人还不是摧枯拉朽之势！小小的建奴尚且是朝廷大患，若是换成了这“髡贼”，后果恐怕更难以预料。每每想到这里，他便再也不愿意想下去了。
 
 　　他忽然叹了一声：“哎！有教无类，有教无类，我辈当得起么？怎么反倒是这些澳洲人做到了？”
 
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　黄禀坤被刘进士看的发毛，正不知道该说些什么的时候。突然见刘大霖挺直了腰板，像在县学讲学一样，坐在轮椅上，严肃的说：“我看澳洲人虽然与我辈所学不同，但胸中还是大有丘壑的。况且他们同是华夏一脉，绝非夷狄。我这就去求见王教谕，请他来从中说合，让我辈也去澳洲人学校一观，增学识，广见闻。”
 
-　　黄禀坤终于说动了刘大霖，心中的石头也终于落了地。芳草地现在主要还是寄宿制学校，只有直系家属才可以预约去探望学生，而当时黄平登记入学的时候黄禀坤是不在家属之列的。况且黄家与髡贼还有杀子之仇，就算黄家如今没了报仇的想法，髦贼势必也是严加提防的。
+　　黄禀坤终于说动了刘大霖，心中的石头也终于落了地。芳草地现在主要还是寄宿制学校，只有直系家属才可以预约去探望学生，而当时黄平登记入学的时候黄禀坤是不在家属之列的。况且黄家与髡贼还有杀子之仇，就算黄家如今没了报仇的想法，髡贼势必也是严加提防的。
 
 　　他出了刘大霖家，回到茉莉轩书院，想看看有没有可以拉着一起去参观的秀才，以壮声势。书院里却空荡荡的，原本一铺难求的东西两斋空荡荡的，床铺桌椅上一览无余。只有少数铺位还有人住宿的样子。
 
