--- a/_posts/2013-8-2-6-11100.md
+++ b/_posts/2013-8-2-6-11100.md
@@ -18,7 +18,7 @@ tag: [normal]
 
 　　好在众人的主要目的是要来一探学校的究竟，对礼遇如何不甚看重，黄禀坤更是带着“忍辱负重”准备来的，众人倒也没有太多的怨言。
 
-　　虽然礼遇上一般，但是在芳草地内可以自由活动还是让其中的一些“有心人”感到满意：只要他们想去听哪节课都可以去听。原本黄禀坤开始还是有些紧张，怕哪天晚上被髡贼神不知鬼不觉的拉了清单，不过慢慢的他也就放松了下来。开始在学园内部乱窜，想找到些什么髦贼的秘密。
+　　虽然礼遇上一般，但是在芳草地内可以自由活动还是让其中的一些“有心人”感到满意：只要他们想去听哪节课都可以去听。原本黄禀坤开始还是有些紧张，怕哪天晚上被髡贼神不知鬼不觉的拉了清单，不过慢慢的他也就放松了下来。开始在学园内部乱窜，想找到些什么髡贼的秘密。
 
 　　这几天来，他们先是听了各式各样的课，从他们最想听的关于格物致知的自然科学、算术，也听了用曾经被王赐鄙夷的“普及读本”教授的语文。
 
