--- a/_posts/2013-8-25-6-13400.md
+++ b/_posts/2013-8-25-6-13400.md
@@ -50,7 +50,7 @@ tag: [normal]
 
 　　人口是元老院和后金贸易图谋的主要“货物”。虽说目前在山东、苏北和浙北都已经设立了人口中转站，而且发动机行动之后大量人口运到已经缓解了劳动力匮乏的问题。但是既然是贸易，就得有所图谋，不然就成援助了。别说企划院不能同意，就是皇太极本人恐怕也要生出疑惑之心。
 
-　　对元老院来说，满清主要用途是作为一块牢牢吸住大明注意力和国力的吸铁石。只要有满清在折腾，大明就不会有足够的财力和军力来关注远在两广的“髦贼”。第一个五年计划—结束之后，元老院势必要进入两广地区，明皮澳心的模式不可能在如此广大的范围内得以延续下去，为了赢得经营两广的时间，让满清使劲的折腾就是最好的牵制手段。
+　　对元老院来说，满清主要用途是作为一块牢牢吸住大明注意力和国力的吸铁石。只要有满清在折腾，大明就不会有足够的财力和军力来关注远在两广的“髡贼”。第一个五年计划—结束之后，元老院势必要进入两广地区，明皮澳心的模式不可能在如此广大的范围内得以延续下去，为了赢得经营两广的时间，让满清使劲的折腾就是最好的牵制手段。
 
 　　总体来说元老院并不倾向于通过花费昂贵的战争来达到目的。如果能够通过于满清的牵制来迫使明廷与元老院妥协，那是再好不过。
 
