--- a/_posts/2013-8-9-6-11800.md
+++ b/_posts/2013-8-9-6-11800.md
@@ -6,7 +6,7 @@ path: 2013-8-9-6-11800.md
 tag: [normal]
 ---
 
-　　他此来的第二件事，就是打听着芳草地的情况，再考虑是否送儿到临高入学。宋宗茂在嗣上不算很旺，只有二个儿。大儿念书不成，不能进学一直是个童生，只好在家帮他经营家业。二儿十四岁了，读过几年私塾，不过澄迈这地方科举和临高差不多，靠读书出人头地的可能姓很低，至于混个秀才功名，如今又没有免粮的好处，而且澳洲人也不看重大明的功名，便起了拿这个儿当“质”讨好澳洲人，增强自己在县里地位的念头——据说很快县咨局就要换届了，自己说不定能给澳洲人挑上。
+　　他此来的第二件事，就是打听芳草地的情况，再考虑是否送儿子到临高入学。宋宗茂在子嗣上不算很旺，只有二个儿子。大儿子念书不成，不能进学一直是个童生，只好在家帮他经营家业。二儿子十四岁了，读过几年私塾，不过澄迈这地方科举和临高差不多，靠读书出人头地的可能姓很低，至于混个秀才功名，如今又没有免粮的好处，而且澳洲人也不看重大明的功名，便起了拿这个儿子当“质”讨好澳洲人，增强自己在县里地位的念头——据说很快县咨局就要换届了，自己说不定能给澳洲人挑上。
 
 　　宋宗茂按照最朴素的王霸思维，认为澳洲人眼下正是收拢人心之际，自己只要把孩子往芳草地一送，那就算是铁了心上了澳洲人的船，澳洲人必然会对自己另眼相看——要知道哪怕是给澳洲人当个大头兵，家眷在县里都是高人一等的有优待。
 
@@ -16,19 +16,19 @@ tag: [normal]
 
 　　关于芳草地的问题，黄秉坤却很难回答——一个劲黑是不行的，老爹也好几次问过黄平的话，对芳草地知道一些，但是说好那是满心的不乐意，再者他对澳洲人在芳草地的教授的澳洲学问和校风也颇有微词。
 
-　　不够，看这宋家老爷刚才流露出来的意思，哪怕这芳草地是火坑也准备叫孩子去跳了。
+　　不过，看这宋家老爷刚才流露出来的意思，哪怕这芳草地是火坑也准备叫孩子去跳了。
 
 　　黄秉坤只好重点在学风上大做章，澳洲学问有用，这已经是很多人的共识，而且宋老爷的本意是“质输诚”，从这点来说学校里教什么他也无所谓。
 
-　　不过，这种土财主最重“家风”，最怕孩在外面学坏——古代社会的原始积累很困难，要有积累就要拼命的压缩日常开销，很多乡间土财主的土地财产都是一点一滴，好几代人一钱一钱，一斤粮食一斤粮食的积攒起来的，十分不容易，万一出了个败家，多年的心血就会毁于一旦。
+　　不过，这种土财主最重“家风”，最怕孩子在外面学坏——古代社会的原始积累很困难，要有积累就要拼命的压缩日常开销，很多乡间土财主的土地财产都是一点一滴，好几代人一钱一钱，一斤粮食一斤粮食的积攒起来的，十分不容易，万一出了个败家子，多年的心血就会毁于一旦。
 
-　　黄平就被拉出来当了方面典型，至于女学生裙很短，伤风败俗不过这说辞里的添头罢了。
+　　黄平就被拉出来当了方面典型，至于女学生裙子很短，伤风败俗不过这说辞里的添头罢了。
 
-　　果然，这番说辞说出来，宋老爷脸上露出了为难的神情。黄家老爷也只好沉默不语，他们这些人秉承的都是“德大于才”的观念的，最怕弟学坏。现在听黄家二少爷说芳草地是这么一个“伤风败俗”之地，不免踌躇起来。
+　　果然，这番说辞说出来，宋老爷脸上露出了为难的神情。黄家老爷也只好沉默不语，他们这些人秉承的都是“德大于才”的观念的，最怕弟子学坏。现在听黄家二少爷说芳草地是这么一个“伤风败俗”之地，不免踌躇起来。
 
 　　宋老爷思虑再三，又开口问了许多学校的食宿学习条件等等的事情。听说三十个人睡一间屋，几千号人一起吃饭，他脸上的踌躇之色愈发浓厚。这之后就没再提起去芳草地念书的事情。过了一会便告退先回房去休息了。
 
-　　黄秉坤心暗暗得意：总算又免了一个良家堕入澳洲人的魔掌——这澳洲好似有迷药似的，一旦进了那学校，一个个都姓情大变。眼见宋老爷已经走了，他才向父亲提起“正事”，埋怨他怎么裁了团，还把这么多土地和佃户包给了天地会。
+　　黄秉坤心暗暗得意：总算又免了一个良家子堕入澳洲人的魔掌——这澳洲好似有迷药似的，一旦进了那学校，一个个都姓情大变。眼见宋老爷已经走了，他才向父亲提起“正事”，埋怨他怎么裁了团，还把这么多土地和佃户包给了天地会。
 
 　　“……爹，您这是糊涂啊，我们黄家之所以历来是临高的‘栋梁’，不正是靠着这乡勇吗？如今您老把地包出去，团勇给裁撤了，这不是自断爪牙吗？今后咱们家还不是被髡贼捏圆揉扁随意搓弄吗？”
 
@@ -54,7 +54,7 @@ tag: [normal]
 
 　　“……我知道你心里放不下你的三弟，可是三弟已经死了，黄家还要延续下去……”说到这里，黄守统已经老泪纵横了，黄老头一哭，惹得黄二少爷也哭了出来。两人抱头痛哭了一场。
 
-　　哭完收泪，黄守统又说了一个重要的决定，他决定把大哥的一个孩送到芳草地去念书。黄秉坤知道这是老父的“输诚”之举，再千万个不愿意也无法反对。毕竟比起个人，家族的延续才是最重要的。
+　　哭完收泪，黄守统又说了一个重要的决定，他决定把大哥的一个孩子送到芳草地去念书。黄秉坤知道这是老父的“输诚”之举，再千万个不愿意也无法反对。毕竟比起个人，家族的延续才是最重要的。
 
 　　“可是这几十户佃户包出去我们也亏了——他们以后就成了澳洲人的人了。您老知道咱们这里值钱的不是地，是人呀。”
 
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　“难道就不能像澳洲人那样开荒……”
 
-　　“种呢？牛呢？”黄守统无可奈何的说道，“开荒不是没开过。可是光咱们庄里的人力物力，修不起水渠，改不了水土，开出来地都是薄田，若不能得到天地会的种和肥料，那不和以前一样么，有什么用？”
+　　“种子呢？牛呢？”黄守统无可奈何的说道，“开荒不是没开过。可是光咱们庄里的人力物力，修不起水渠，改不了水土，开出来地都是薄田，若不能得到天地会的种子和肥料，那不和以前一样么，有什么用？”
 
 　　黄秉坤无可奈何，他知道爹说得话没错，这地在自己手里就是土坷垃，到了澳洲人手里就是金坷垃。
 
