--- a/_posts/2014-1-9-6-27100.md
+++ b/_posts/2014-1-9-6-27100.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　萧子山想到：有位接受女仆问题征询的元老曾经提出过这个“脱密期”，大致来说是规定生活秘书解除关系之后，要有25-30年的脱密期。期间得继续留在临高，不能出行、不能结婚，通信和交友受到监管。当然更没有受采访和出版的权利，工作和住所则由办公厅负责安排，打发到一个偏僻的地方养老去；还要双倍赔偿元老院为其支付的在生活秘书学校时期的食宿和教育费用，分期偿还。因为欠债导致信用受损，在生活、购物、消费、信贷等方面都受到各种限制。他的意见是通过这两条，能吓住99%的要分手的生活秘书，即使还没吓住。也能确保控制住生活秘书使其不会造成什么损害。
 
-　　他摇了摇头：“这个脱密期太残酷了，简直是让退役的生活秘书守一辈子活寡的节奏，坐大牢;——无非是软禁。”他喝了一大口茶。“要是类比的话，和皇帝寡妇住冷宫、德川将军的妻妾落饰出家住尼姑庵有什么区别，”
+　　他摇了摇头：“这个脱密期太残酷了，简直是让退役的生活秘书守一辈子活寡的节奏，坐大牢——无非是软禁。”他喝了一大口茶。“要是类比的话，和皇帝寡妇住冷宫、德川将军的妻妾落饰出家住尼姑庵有什么区别，”
 
 　　“不，我们法学会制定脱密期不是这样处理的。”马甲笑着说道。“要真这样。我们比大明和一切封建社会都不如了——只有皇帝的女人才明文不许再嫁，皇帝只有一个，我们男性元老可有小五百人，浪费这么多适龄的女子会被雷劈的。再者，干脆把她们软禁起来也就算了，不许结婚却又准许她们在临高自由活动，那简直是鼓励偷情。小安，你继续说吧。”
 
