--- a/_posts/2013-7-28-6-10600.md
+++ b/_posts/2013-7-28-6-10600.md
@@ -6,9 +6,9 @@ path: 2013-7-28-6-10600.md
 tag: [normal]
 ---
 
-　　虽说心理上充分的鄙视澳洲人的“术”不是正道。但是黄禀坤对澳洲人的存在和他们愈来愈强大，强大到足够迷惑许多人——甚至那些饱读圣人诗书的读书人也跟着自甘堕落——却是很重视的，他不是埋起头来的鸵鸟，深知要打败澳洲人，只有“师髦长技以制髦”。要打败敌人，首先要了解敌人，黄二少爷从小跟着老爷子御匪，深知知己知彼的重要性。
+　　虽说心理上充分的鄙视澳洲人的“术”不是正道。但是黄禀坤对澳洲人的存在和他们愈来愈强大，强大到足够迷惑许多人——甚至那些饱读圣人诗书的读书人也跟着自甘堕落——却是很重视的，他不是埋起头来的鸵鸟，深知要打败澳洲人，只有“师髡长技以制髡”。要打败敌人，首先要了解敌人，黄二少爷从小跟着老爷子御匪，深知知己知彼的重要性。
 
-　　为了施展“师髡长技以制髡”多了解髡贼内情。县咨局成立后不久，借着父亲黄守统接受点名当上了“委员”的机会，他便与老父黄守统商量，送自己的随身小厮黄平去芳草地念书，学澳洲人之术，伺机打探髦贼的内情。当上委员的乡绅们纷纷派自家子弟去念书，以示输诚。
+　　为了施展“师髡长技以制髡”多了解髡贼内情。县咨局成立后不久，借着父亲黄守统接受点名当上了“委员”的机会，他便与老父黄守统商量，送自己的随身小厮黄平去芳草地念书，学澳洲人之术，伺机打探髡贼的内情。当上委员的乡绅们纷纷派自家子弟去念书，以示输诚。
 
 　　黄守统当时深深的皱了半天的眉毛，良久不语。似乎有“不妥”之感。黄禀坤再三力陈自己这么做的用意。黄守统最后才长叹一声：“我黄家在临高的家业，不能虚掷在无用的意气之争上，禀坤呀，咱们要看得清大势！”
 
@@ -20,9 +20,9 @@ tag: [normal]
 
 　　黄禀坤每次都十分认真的听小厮，这个原来沉默寡言的少年，自从去了芳草地以后，渐渐的变得健谈起来，每次回来都有无尽的话题和大家说：他的学习内容，学校里的环境，他的同学、老师们。
 
-　　黄平好不容易讲完之后，黄禀坤总要夸奖他几句，嘱咐他不要忘记“圣人之言”切不可“被髦贼迷了心”黄平总是唯唯诺诺一番，便去和自家父母团聚去了。
+　　黄平好不容易讲完之后，黄禀坤总要夸奖他几句，嘱咐他不要忘记“圣人之言”切不可“被髡贼迷了心”黄平总是唯唯诺诺一番，便去和自家父母团聚去了。
 
-　　黄平的父母在黄家寨耕田种地，自从自己的儿子去上学了以后，每次遇到黄二少爷，脸上也总是挂着憨憨的笑容，千恩万谢“少爷的大恩”。这让黄禀坤觉得很得意，即探听了髦贼的虚实，又收买了人心。
+　　黄平的父母在黄家寨耕田种地，自从自己的儿子去上学了以后，每次遇到黄二少爷，脸上也总是挂着憨憨的笑容，千恩万谢“少爷的大恩”。这让黄禀坤觉得很得意，即探听了髡贼的虚实，又收买了人心。
 
 　　黄禀坤花了大量的时间来研究抄录下来的教科书和教辅材料。希望能找出来造出大炮火枪大铁船的秘法来，可惜髡贼的课本虽然用得是汉字，但是算术和自然科学课程里大量沿用了很多字母来表示，所以黄二公子也看不懂。再者黄平入学的时候虽然已经十四岁了，但是只能从初小部一年级开始。芳草地的初小一年级的三门课程：数学、语文、自然科学，哪一门都没谈到黄禀坤最想知道的“术”。
 
