--- a/_posts/2014-2-16-6-30900.md
+++ b/_posts/2014-2-16-6-30900.md
@@ -10,9 +10,9 @@ tag: [normal]
 
 　　这回他冒充伙计上船干活，而且不直接航向临高，就是为了自己潜入临高更加安全——真所谓全身心融入角色之中，苦活累活抢着干不算，巴结起人也是不遗余力。脸晒黑了，皮肤也变得的粗糙的，渐渐就将自己身上的“官气”、“公子哥儿”的气息——磨去。
 
-　　这样搭船在大海上来回航行了几个月之后，林铭觉得差不多了，便对纲首说自己想到临高去投澳洲人——这在广东、福建二地已经不是什么稀罕事了，临高的移民已经出现了颇具规模的主动移民潮，每天都有人渡海到临高“投髦”——结清了工钱之后，他就在高雄下了船。
+　　这样搭船在大海上来回航行了几个月之后，林铭觉得差不多了，便对纲首说自己想到临高去投澳洲人——这在广东、福建二地已经不是什么稀罕事了，临高的移民已经出现了颇具规模的主动移民潮，每天都有人渡海到临高“投髡”——结清了工钱之后，他就在高雄下了船。
 
-　　在高雄下船，是他精心盘算过得——他已经不止一次来过这里了，对这里的情况已经相当熟悉，也大致了解了髦贼的做事风格。不仅如此，此地来往临高的船只很多，而且距离大员亦不远，两地都有很多大明商人的船只，这些船在出发前大多要就地招募补充人员，很容易就能混上船。
+　　在高雄下船，是他精心盘算过得——他已经不止一次来过这里了，对这里的情况已经相当熟悉，也大致了解了髡贼的做事风格。不仅如此，此地来往临高的船只很多，而且距离大员亦不远，两地都有很多大明商人的船只，这些船在出发前大多要就地招募补充人员，很容易就能混上船。
 
 　　现在他待在东山居的甲板下面，双目炯炯，盘算着下一步的行动。
 
@@ -44,15 +44,15 @@ tag: [normal]
 
 　　刘管事呷了一口，酒笑道：“你还说自己不是读书人，一般的伙计哪有你这样的做派的？这菜汁，不用说是用舌头舔干净的，饭后漱口，那就更不用说了。咱们刘老爷都没这个做派呢。”
 
-　　林铭心中暗暗叫苦，没想到自己几个月的苦日子，并没有将原有的生活痕迹完全改掉，这老头都能看出来，髦贼能看不出来？不免有些灰心丧气。
+　　林铭心中暗暗叫苦，没想到自己几个月的苦日子，并没有将原有的生活痕迹完全改掉，这老头都能看出来，髡贼能看不出来？不免有些灰心丧气。
 
 　　沮丧之情不免浮于脸色，刘管事还以为触动了他的伤心事，不免解劝道：“后生仔，莫要丧气，你年纪还轻，有一把力气，如今海面上太平，好好做事，要想富贵固然不易，挣一个小康人家大约还是行的。”
 
-　　林铭忽而灵机一动，他意识到自己无论怎么掩盖，自己以往生活留下的痕迹是不可能完全磨灭的。到了临高可不比这海船上，水手伙计都是随时来随时走，乌合瓦聚，谁也不管谁得闲事。听闻髦贼最爱刨根问底，自己露出的种种蛛丝马迹，肯定会被他们发觉。
+　　林铭忽而灵机一动，他意识到自己无论怎么掩盖，自己以往生活留下的痕迹是不可能完全磨灭的。到了临高可不比这海船上，水手伙计都是随时来随时走，乌合瓦聚，谁也不管谁得闲事。听闻髡贼最爱刨根问底，自己露出的种种蛛丝马迹，肯定会被他们发觉。
 
 　　刘管事这番话，看似是老年人爱絮叨，出于善心，林铭知道这里面也包合着“盘底“的意思在内。
 
-　　自己若是不能应答的令人满意，就无法得到他们的信任。这船是澳洲人船厂造的，这家船主与髦贼的关系恐怕非浅，到了临高万一去和髦贼嚼几句舌头，自己立马就会死无葬身之地！看来这样遮遮掩掩伪装穷人是不成的，得编造一个说得通的身世来打马虎眼。
+　　自己若是不能应答的令人满意，就无法得到他们的信任。这船是澳洲人船厂造的，这家船主与髡贼的关系恐怕非浅，到了临高万一去和髡贼嚼几句舌头，自己立马就会死无葬身之地！看来这样遮遮掩掩伪装穷人是不成的，得编造一个说得通的身世来打马虎眼。
 
 　　想到这里，他的主意已定，脑子里转了几个圈，已经有了一篇腹稿，故意叹了一声道：“刘管事你看事的确老到！不瞒您说，家里过去的确有份小小的家业，虽然算不上富贵，也是吃喝不愁。只是父母走得早……”当下涕泪横流的编造了一番浪荡子弟败光家业，不得不飘零海上谋生的传统故事。
 
@@ -60,16 +60,16 @@ tag: [normal]
 
 　　他当即把两家人家的事情掐头去尾的安在自己身上，说到动情处，还假意擦泪以示声泪俱下。如此一来，就算是刘管事这样的老江湖也被他蒙了过去，见他伤心，刘管事还解劝了他几句。
 
-　　“原本我看你能写会算，想请兄弟你在船上做个文案先生。不过你既然想去临高投髦，我也就不提了。”刘管事说道，“听说澳洲人那里很有活路，多少过不下去的人都去那里寻生路，如今过得都不错，你年轻又识字，只要肯干活，将来定能受重用。”
+　　“原本我看你能写会算，想请兄弟你在船上做个文案先生。不过你既然想去临高投髡，我也就不提了。”刘管事说道，“听说澳洲人那里很有活路，多少过不下去的人都去那里寻生路，如今过得都不错，你年轻又识字，只要肯干活，将来定能受重用。”
 
 　　“多谢刘管事尝慰。我现在哪里还敢想这些。听说临高那边澳洲人用工多，只要肯卖力气都有饭吃，这才想去临高的。我只想着能太太平平到临高，有份工做，有屋住，脚踏实地的能挣一碗饭吃就好。这船上的活计，我真心做不来呀。”
 
 　　近代之前的航海即无天气预报，也没有气象雷达、气压计；航海图即不完善，又有海盗出没……航行毫无安全性可言，出海就是铤而走险。一般百姓不是走投无路的人，谁也不愿意上船去谋生。林铭这番表白合情合理。完全符合他破落户子弟的身份。
 
-　　“你这是谦逊过头了，”刘管事喝了几口，脸色微酡，“你大约还不知道，像你这般能写会算的，到的临高只要愿意剃发投髦，都能混上个‘干部’做做——大约就是澳洲人的‘吏’了吧。多少不论，先能吃上一份皇粮，你说这样的好处，大明可有？”
+　　“你这是谦逊过头了，”刘管事喝了几口，脸色微酡，“你大约还不知道，像你这般能写会算的，到的临高只要愿意剃发投髡，都能混上个‘干部’做做——大约就是澳洲人的‘吏’了吧。多少不论，先能吃上一份皇粮，你说这样的好处，大明可有？”
 
-　　林铭一怔，心道：我还真不知道髦贼这么“求贤若渴”，不过这么一来，自己的谋算又距离成功近了一步。赶紧赔笑道：“身体发肤受之父母，剃发这事太大了，纵然不剃发，大约去挣口饭也容易……”
+　　林铭一怔，心道：我还真不知道髡贼这么“求贤若渴”，不过这么一来，自己的谋算又距离成功近了一步。赶紧赔笑道：“身体发肤受之父母，剃发这事太大了，纵然不剃发，大约去挣口饭也容易……”
 
 　　刘管事点点头：“后生仔孝心可嘉。我这老头儿就不多说什么了。去临高好好过日子便是。我是老啦，在老爷这里待了一辈子，待惯了走不动了，要再年轻个十岁二十岁的，也投到澳洲人手下去谋个前程。”说罢他将杯中酒一饮而尽。
 
-　　吃罢晚饭，林铭将食具收拾干净，回到舱中。刘管事早就摆下棋局，二人你来我往的杀了几局。林铭在百户所里平时无所事事，为了排遣无聊各种消遣玩意无一不精，棋艺堪称精湛。他知道这条船和髦贼颇有渊源，刘管事等人又多次去过临高，是个绝好的了解髦贼内情的渠道，便有意控制好杜力，二人你来我往的厮杀的难解难分，勾得一直横扫全船的刘管事大呼过瘾，二人边下棋边聊天，林铭便乘机了解了不少临高的事情。
+　　吃罢晚饭，林铭将食具收拾干净，回到舱中。刘管事早就摆下棋局，二人你来我往的杀了几局。林铭在百户所里平时无所事事，为了排遣无聊各种消遣玩意无一不精，棋艺堪称精湛。他知道这条船和髡贼颇有渊源，刘管事等人又多次去过临高，是个绝好的了解髡贼内情的渠道，便有意控制好杜力，二人你来我往的厮杀的难解难分，勾得一直横扫全船的刘管事大呼过瘾，二人边下棋边聊天，林铭便乘机了解了不少临高的事情。
