调整人物页面名称
Signed-off-by: Larry Li <larryli@qq.com>

--- a/_characters/y001.md
+++ b/_characters/y001.md
@@ -1,8 +1,8 @@
 ---
 collection: characters
 layout: post
-title: 文德嗣
-path: y2.md
+title: 萧子山
+path: y001.md
 ---
 
 - [第一卷　启航　第一节 虫洞降临]({% post_url 2009-9-1-1-00100 %})
