--- a/_characters/y002.md
+++ b/_characters/y002.md
@@ -1,8 +1,8 @@
 ---
 collection: characters
 layout: post
-title: 王洛宾
-path: y3.md
+title: 文德嗣
+path: y002.md
 ---
 
 - [第一卷　启航　第一节 虫洞降临]({% post_url 2009-9-1-1-00100 %})
