--- a/_characters/y003.md
+++ b/_characters/y003.md
@@ -1,8 +1,8 @@
 ---
 collection: characters
 layout: post
-title: 萧子山
-path: y1.md
+title: 王洛宾
+path: y003.md
 ---
 
 - [第一卷　启航　第一节 虫洞降临]({% post_url 2009-9-1-1-00100 %})
